               a list of headers and ‘RLum.Analysis’ objects.

         • ‘Risoe.BINfileData2RLum.Data.Curve()’

             • Corrupt RisoeBINfileData-objects containing no
               measurement data (NPOINTS = 0) no longer cause an error
               during while the RLum.Data.Curve-object is produced.
               Curve x- and y-values are set to NA (BIN-file issue
               Norbert Mercier).

         • ‘Second2Gray()’

             • The data provided with the argument ‘dose.rate’ can be
               now also of type ‘data.frame’

         • ‘writeR2BIN()’

             • Fix some minor issues for if only empty text fields
               (e.g., COMMENT) are provided,

             • implement a function stop for the really rare case that
               someone tries to export a 'Risoe.BINfileData-class'
               object importet in the workspace with an old package
               version and now try to write it back to a BIN-file
               (e.g., the package example data).

  Example data:

             • The ‘Risoe.BINfileData-class’ objects in
               ‘ExampleData.BINfileData’ did not contain a ‘.RESERVED’
               slot for historical reasons.  So far this caused no
               problem, but if one wanted to write the BIN-file
               information back to a file an error occurred; this has
               been fixed now,

             • fix some internal package related example data size
               issues (no effect for the users).

  Internals:

             • Hopefully fix NAMESPACE issue with 'rgdal' package,

             • add imports from base packages as requested by CRAN,

             • further clean-up NAMESPACE file,

             • dependency to package 'zoo' removed for this build, will
               be added again in 0.5.0,

             • add import for package 'assertive' to hopefully provide
               more user friendly error messages.
