@@ -43,7 +43,8 @@ Imports:
     data.table (>= 1.9.4),
     Rcpp (>= 0.12.0),
     parallel,
-    minpack.lm
+    minpack.lm,
+    digest
 LinkingTo: Rcpp
 URL: http://CRAN.R-project.org/package=Luminescence
 Collate:
