@@ -782,12 +782,13 @@ analyse_IRSAR.RF<- function(
 
   ##Combine everthing in a data.frame
   RC.data.frame <- data.frame(
-    POSITION =  as.integer(aliquot.position),
-    CRITERIA = c(names(RC)),
-    THRESHOLD = unlist(RC),
-    VALUE = c(RC.curves_ratio, RC.residuals_slope,RC.curves_bounds),
-    STATUS = c(RC.curves_ratio.status, RC.residuals_slope.status, RC.curves_bounds.status),
-    SEQUENCE_NAME = aliquot.sequence_name,
+      POSITION =  as.integer(aliquot.position),
+      CRITERIA = c(names(RC)),
+      THRESHOLD = unlist(RC),
+      VALUE = c(RC.curves_ratio, RC.residuals_slope,RC.curves_bounds),
+      STATUS = c(RC.curves_ratio.status, RC.residuals_slope.status, RC.curves_bounds.status),
+      SEQUENCE_NAME = aliquot.sequence_name,
+      UID = NA,
     row.names = NULL,
     stringsAsFactors = FALSE
   )
@@ -1212,18 +1213,35 @@ analyse_IRSAR.RF<- function(
 
   ##combine values for De into a data frame
   De.values <- data.frame(
-    DE = De,
-    DE.LOWER = De.lower,
-    DE.UPPER = De.upper,
-    DE.STATUS = De.status,
-    RF_NAT.LIM = paste(RF_nat.lim, collapse = ":"),
-    RF_REG.LIM = paste(RF_reg.lim, collapse = ":"),
-    POSITION =  as.integer(aliquot.position),
-    DATE = aliquot.date,
-    SEQUENCE_NAME = aliquot.sequence_name,
+      DE = De,
+      DE.LOWER = De.lower,
+      DE.UPPER = De.upper,
+      DE.STATUS = De.status,
+      RF_NAT.LIM = paste(RF_nat.lim, collapse = ":"),
+      RF_REG.LIM = paste(RF_reg.lim, collapse = ":"),
+      POSITION =  as.integer(aliquot.position),
+      DATE = aliquot.date,
+      SEQUENCE_NAME = aliquot.sequence_name,
+      UID = NA,
     row.names = NULL,
     stringsAsFactors = FALSE
   )
+
+  ##add data set identifyer
+  token <- paste(
+             De.values$De,
+             De.values$POSITION,
+             De.values$DATE,
+             De.values$SEQUENCE_NAME,
+             RC.data.frame$VALUE,
+            collapse = "" )
+
+  ##generate unique identifier
+  UID <- digest::digest(object = token, algo = "md5")
+
+    ##update data.frames accordingly
+    De.values$UID <- UID
+    RC.data.frame$UID <- UID
 
   ##produce results object
   newRLumResults.analyse_IRSAR.RF <- set_RLum(class = "RLum.Results",
