@@ -63,9 +63,9 @@
 </td>
 <td class=cellinside>0.4.0
 </td>
-<td class=cellinside>2015-08-04
+<td class=cellinside>2015-08-05
 </td>
-<td class=cellinside>13:36:15
+<td class=cellinside>19:53:02
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -252,9 +252,9 @@
 </td>
 <td class=cellinside>0.1
 </td>
-<td class=cellinside>2015-07-23
+<td class=cellinside>2015-08-05
 </td>
-<td class=cellinside>17:09:29
+<td class=cellinside>11:29:39
 
 </td>
 <td class=cellinside><br /> Christoph Burow, University of Cologne (Germany)<br />  R Luminescence Package Team
@@ -442,9 +442,9 @@
 </td>
 <td class=cellinside>0.2.0
 </td>
-<td class=cellinside>2015-08-04
+<td class=cellinside>2015-08-05
 </td>
-<td class=cellinside>15:04:49
+<td class=cellinside>11:28:41
 
 </td>
 <td class=cellinside><br /> Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),<br />  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1117,9 +1117,9 @@
 </td>
 <td class=cellinside>0.2.5
 </td>
-<td class=cellinside>2015-08-04
+<td class=cellinside>2015-08-05
 </td>
-<td class=cellinside>08:46:52
+<td class=cellinside>11:28:41
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1471,9 +1471,9 @@
 </td>
 <td class=cellinside>0.5.0
 </td>
-<td class=cellinside>2015-08-04
+<td class=cellinside>2015-08-05
 </td>
-<td class=cellinside>15:54:31
+<td class=cellinside>11:29:39
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),  Michael Dietze, GFZ Potsdam (Germany),  Margret C. Fuchs, HZDR,<br /> Helmholtz-Institute Freiberg for Resource Technology<br /> (Germany)<br />  R Luminescence Package Team
