@@ -1,12 +1,12 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Tue Aug  4 15:56:28 2015
+% Wed Aug  5 19:59:39 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
   \hline
  & Name & Title & Description & Version & m.Date & m.Time & Author \\ 
   \hline
-1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003)$<$br /$>$ & 0.4.0 & 2015-08-04 & 13:36:15
+1 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003)$<$br /$>$ & 0.4.0 & 2015-08-05 & 19:53:02
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   2 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.1.4 & 2015-07-24 & 16:13:49
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -25,7 +25,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   10 & calc\_CentralDose & Apply the central age model (CAM) after Galbraith et al. (1999) to a given$<$br /$>$ De distribution & $<$br /$>$ This function calculates the central dose and dispersion of the De$<$br /$>$ distribution, their standard errors and the profile log likelihood function$<$br /$>$ for sigma.$<$br /$>$ & 1.3 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010  $<$br /$>$  R Luminescence Package Team \\ 
-  11 & calc\_CommonDose & Apply the (un-)logged common age model after Galbraith et al. (1999) to a$<$br /$>$ given De distribution & $<$br /$>$ Function to calculate the common dose of a De distribution.$<$br /$>$ & 0.1 & 2015-07-23 & 17:09:29
+  11 & calc\_CommonDose & Apply the (un-)logged common age model after Galbraith et al. (1999) to a$<$br /$>$ given De distribution & $<$br /$>$ Function to calculate the common dose of a De distribution.$<$br /$>$ & 0.1 & 2015-08-05 & 11:29:39
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   12 & calc\_CosmicDoseRate & Calculate the cosmic dose rate & $<$br /$>$ This function calculates the cosmic dose rate taking into account the soft-$<$br /$>$ and hard-component of the cosmic ray flux and allows corrections for$<$br /$>$ geomagnetic latitude, altitude above sea-level and geomagnetic field$<$br /$>$ changes.$<$br /$>$ & 0.5.2 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -45,7 +45,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)   Based on a$<$br /$>$ rewritten S script of Rex Galbraith, 2010   The bootstrap approach is$<$br /$>$ based on a rewritten MATLAB script of Alastair Cunningham.   Alastair$<$br /$>$ Cunningham is thanked for his help in implementing and cross-checking the$<$br /$>$ code.$<$br /$>$  R Luminescence Package Team \\ 
   20 & calc\_OSLLxTxRatio & Calculate Lx/Tx ratio for CW-OSL curves & $<$br /$>$ Calculate Lx/Tx ratios from a given set of CW-OSL curves.$<$br /$>$ & 0.5.1 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  21 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.2.0 & 2015-08-04 & 15:04:49
+  21 & calc\_SourceDoseRate & Calculation of the source dose rate via the date of measurement & $<$br /$>$ Calculating the dose rate of the irradiation source via the date of$<$br /$>$ measurement based on: source calibration date, source dose rate, dose rate$<$br /$>$ error. The function returns a data.frame that provides the input argument$<$br /$>$ dose\_rate for the function  Second2Gray .$<$br /$>$ & 0.2.0 & 2015-08-05 & 11:28:41
  & $<$br /$>$ Margret C. Fuchs, HZDR, Helmholtz-Institute Freiberg for Resource Technology (Germany),$<$br /$>$  Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   22 & calc\_Statistics & Function to calculate statistic measures & $<$br /$>$ This function calculates a number of descriptive statistics for De-data,$<$br /$>$ most fundamentally using error-weighted approaches.$<$br /$>$ & 0.1.2 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
@@ -108,7 +108,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Based on a rewritten$<$br /$>$ S script of Rex Galbraith, 2010$<$br /$>$  R Luminescence Package Team \\ 
   56 & plot\_Risoe.BINfileData & Plot single luminescence curves from a BIN file object & $<$br /$>$ Plots single luminescence curves from an object returned by the$<$br /$>$ readBIN2R  function.$<$br /$>$ & 0.4.1 & 2015-04-30 & 12:00:00
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  57 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.2.5 & 2015-08-04 & 08:46:52
+  57 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.2.5 & 2015-08-05 & 11:28:41
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   58 & plot\_RLum.Data.Curve & Plot function for an RLum.Data.Curve S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Data.Curve S4 class object$<$br /$>$ & 0.1.5 & 2015-07-23 & 21:04:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -139,7 +139,7 @@
   73 & RLum.Data.Image-class & Class  "RLum.Data.Image" & $<$br /$>$ Class for luminescence image data (TL/OSL/RF).$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   74 & RLum.Data.Spectrum-class & Class  "RLum.Data.Spectrum" & $<$br /$>$ Class for luminescence spectra data (TL/OSL/RF).$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   75 & RLum.Results-class & Class  "RLum.Results" & $<$br /$>$ Object class contains results data from functions.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
-  76 & Second2Gray & Converting values from seconds (s) to gray (Gy) & $<$br /$>$ Conversion of absorbed radiation dose in seconds (s) to the SI unit gray$<$br /$>$ (Gy) including error propagation. Normally used for equivalent dose data.$<$br /$>$ & 0.5.0 & 2015-08-04 & 15:54:31
+  76 & Second2Gray & Converting values from seconds (s) to gray (Gy) & $<$br /$>$ Conversion of absorbed radiation dose in seconds (s) to the SI unit gray$<$br /$>$ (Gy) including error propagation. Normally used for equivalent dose data.$<$br /$>$ & 0.5.0 & 2015-08-05 & 11:29:39
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany),  Margret C. Fuchs, HZDR,$<$br /$>$ Helmholtz-Institute Freiberg for Resource Technology$<$br /$>$ (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   77 & set\_Risoe.BINfileData & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RisoeBINfileData S4 class objects.$<$br /$>$ & 0.1 & 2015-07-23 & 17:09:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
